fix(backend): corrigido provider de auth, dependencias do jjwt e pacotes (closes #68)